<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_select_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/select"
        app:srcCompat="@drawable/ic_baseline_monetization_on_24" />

    <TextView
        android:id="@+id/select"
        style="@style/Widget.CurrencyConvert.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/select_currency"
        app:layout_constraintStart_toEndOf="@id/icon_select_currency"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/currencies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/option_euro"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/select"
        app:layout_constraintTop_toBottomOf="@+id/select">

        <RadioButton
            android:id="@+id/option_euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1" />

        <RadioButton
            android:id="@+id/option_usd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option2" />

        <RadioButton
            android:id="@+id/option_yen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option3" />

        <RadioButton
            android:id="@+id/option_riyal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option4" />
    </RadioGroup>

    <ImageView
        android:id="@+id/icon_currency_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/currency_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/currency_value"
        app:srcCompat="@drawable/ic_baseline_close_fullscreen_24"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currency_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon_currency_value"
        app:layout_constraintStart_toStartOf="@id/currencies"
        app:layout_constraintTop_toBottomOf="@+id/currencies">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currency_value_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/currency_value"
        app:layout_constraintTop_toBottomOf="@id/currency_value" />

    <TextView
        android:id="@+id/result"
        style="@style/Widget.CurrencyConvert.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button" />

</androidx.constraintlayout.widget.ConstraintLayout>